--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,23 @@
 /* Colours */
 
 .bg-color-name-title {
-    background-color: #676767;
+    background-image: linear-gradient(#827155, #676767);
+}
+
+.ui-menu-color-home {
+    background-color: #e67e22;
+}
+
+.ui-menu-color-resume {
+    background-color: #9b59b6;
+}
+
+.ui-menu-color-contact {
+    background-color: #3498db;
+}
+
+.ui-menu-color-download {
+    background-color: #525252;
 }
 
 /* Heading */
@@ -43,3 +59,18 @@ header {
     margin-bottom: 90px;
     color: white;
 }
+
+/* remove space between list items */
+.list-inline-item:not(:last-child) {
+    margin-right: 0;
+}
+
+.menucontainer {
+    font-size: 0;
+}
+
+#nav li {
+    font-size: 14px;
+    padding: 0;
+}
+/* --- */
