--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,23 @@
     background-color: #525252;
 }
 
+
+/* Special paddings/margins/text */
+
+h1, h2, h3, h4 {
+    margin: 0;
+}
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+.general-sub {
+    font-family: "Exo", sans-serif;
+    font-weight: 300;
+    color: #fafafa;
+}
+
 /* Heading */
 
 header {
@@ -108,4 +125,13 @@ header {
     font-size: 14px;
     font-weight: 300;
     letter-spacing: 2px;
+}
+
+
+/* Footer */
+
+footer {
+    background-color: #525252;
+    color: #fafafa;
+    min-height: 120px;
 }
