--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 /* Colours */
 
 .bg-color-name-title {
-    background-image: linear-gradient(#827155, #676767);
+    background: #3e9897;
 }
 
 .ui-menu-color-home {
@@ -62,6 +62,7 @@ header {
     transition: all .5s ease-in-out;
     -moz-transition: all .5s ease-in-out;
     -webkit-transition: all .5s ease-in-out;
+    filter: contrast(1.3) saturate(0.6);
 }
 
 .name {
