--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,16 +79,21 @@ header {
     margin-left: 50px;
 }
 
+.logo-wrapper {
+    display: flex;
+    justify-content: center;
+}
+
 .logo {
+    align-self: center;
+    border-radius: 10%;
+    width: 350px;
+    height: 350px;
     background: url("../images/avatar.jpg");
-    background-position: top;
+    background-position: top left;
     background-repeat: no-repeat;
-    background-size: cover;
-    min-height: 360px;
-    transition: all .5s ease-in-out;
-    -moz-transition: all .5s ease-in-out;
-    -webkit-transition: all .5s ease-in-out;
-    filter: contrast(1.3) saturate(0.6);
+    background-size: 500px;
+    filter: saturate(0.7) brightness(120%) ;
 }
 
 .name {
