--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -362,3 +362,8 @@ button[type="submit"] {
     color: #fafafa;
     background-color: #e84610;
 }
+
+/*--------------------------------------------Map*/
+div#map {
+    min-height: 360px;
+}
