--- a/assets/css/github-styles.css
+++ b/assets/css/github-styles.css
@@ -149,6 +149,26 @@ img {
   background-image: linear-gradient(top, #4b87c2, #396895);
 }
 
+.repo-list .repo-highlight {
+  background-color: #6f5323;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#ca973e), to(#96702f));
+  background-image: -webkit-linear-gradient(top, #d89955, #96702f);
+  background-image: -moz-linear-gradient(top, #d89955, #96702f);
+  background-image: -ms-linear-gradient(top, #d89955, #96702f);
+  background-image: -o-linear-gradient(top, #d89955, #96702f);
+  background-image: linear-gradient(top, #d89955, #96702f);
+}
+
+.repo-list .repo-highlight:hover {
+  background-color: #96702f;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#c1884a), to(#805f28));
+  background-image: -webkit-linear-gradient(top, #c1884a, #805f28);
+  background-image: -moz-linear-gradient(top, #c1884a, #805f28);
+  background-image: -ms-linear-gradient(top, #c1884a, #805f28);
+  background-image: -o-linear-gradient(top, #c1884a, #805f28);
+  background-image: linear-gradient(top, #c1884a, #805f28);
+}
+
 .repo-list ul li a:active {
   -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.25);
