--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,12 +35,21 @@ body {
     background-color: #9b59b6;
 }
 
-.ui-menu-color-contact {
-    background-color: #3498db;
+.ui-menu-color-projects {
+    background-color: #68b731;
 }
 
 .ui-menu-color-github {
     background-color: #a7832f;
+}
+
+
+.ui-menu-color-contact {
+    background-color: #3498db;
+}
+
+.ui-menu-color-download {
+    background-color: #525252;
 }
 
 
