--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -422,3 +422,25 @@ button[type="submit"] {
 .modal-btn:hover{
     color: white;
 }
+
+/* Divider https://codepen.io/isabelc/pen/MmrJgx*/
+.astrodivider {
+    margin: 10px auto;
+    width: 400px;
+    max-width: 100%;
+    position:relative;
+  }
+
+  .astrodividermask {
+      overflow:hidden; height:10px;
+  }
+
+  .astrodividermask:after {
+    content:'';
+    display: block;
+    margin: -25px auto 0;
+    width: 100%;
+    height: 25px;
+    border-radius: 125px / 12px;
+    box-shadow:0 0 3px #ffc107;
+  }
